--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,13 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-
     "version": "0.2.0",
-    "configurations": [     
+    "configurations": [
         {
             "name": "Debug C++ (tfm)",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/tfm",
             "args": [],
-            "stopAtEntry": true,
+            "stopAtEntry": false,
             "cwd": "${workspaceFolder}/build",
             "environment": [],
             "externalConsole": false,
@@ -23,7 +19,14 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "cmake build" 
+            "preLaunchTask": "cmake build"
+        },
+        {
+            "name": "CMake: CMake Script",
+            "type": "cmake",
+            "request": "launch",
+            "cmakeDebugType": "script",
+            "scriptPath": "${file}"
         }
     ]
 }
