--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Debug C++ (tfm)",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/tfm",
+            "program": "${workspaceFolder}/build/tui/tui/tfm",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/build",
