cmake build system and google-test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,18 @@
-# tui/CMakeLists.txt
+# CMakeLists.txt
 
-# Mindestanforderung an CMake festlegen
 cmake_minimum_required(VERSION 4.1)
 
-# Projektname definieren
-project(DuplicateFileFinder CXX)
+project(terminal_file_manager CXX)
 
-# C++ Standard festlegen (FTXUI bevorzugt C++17 oder neuer)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+option(BUILD_TESTS "Build unit tests" ON)
 
-# Aktiviere strenge Warnungen für alle Targets
-#if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-#    add_compile_options(-Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion -Wshadow)
-#elseif (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
-#    add_compile_options(/W4 /permissive- /w44265 /w44062)
-#endif()
-
+if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    add_compile_options(-Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion -Wshadow)
+elseif (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
+    add_compile_options(/W4 /permissive- /w44265 /w44062)
+endif()
 
 # Library
 add_subdirectory(lib)
@@ -24,9 +20,15 @@ add_subdirectory(lib)
 # CLI application
 add_subdirectory(cli)
 
+# Tests (optional)
+if(BUILD_TESTS)
+    message(STATUS "Building tests")
+    enable_testing()
+    add_subdirectory(tests)
+endif()
+
 # TUI application (optional)
 option(BUILD_TUI "Build FTXUI version" ON)
 if(BUILD_TUI)
     add_subdirectory(tui)
 endif()
-
