--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -1,7 +1,9 @@
-add_executable(dfinder_cli 
+# cli/CMakeLists.txt
+
+add_executable(tmf-cli 
     main.cpp
 )
 
-target_link_libraries(dfinder_cli PRIVATE 
-    fileinfo_lib
+target_link_libraries(tmf-cli PRIVATE 
+    tmf-lib
 )
