--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,14 +1,14 @@
 # lib/CMakeLists.txt
-add_library(fileinfo_lib STATIC
+add_library(tmf-lib STATIC
     fileinfo/filescanner.cpp
     fileinfo/filesafety.cpp 
 )
 
-target_include_directories(fileinfo_lib PUBLIC
+target_include_directories(tmf-lib PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/fileinfo
 )
 
-target_compile_features(fileinfo_lib PUBLIC cxx_std_17)
+target_compile_features(tmf-lib PUBLIC cxx_std_17)
 
 # Optional: Header-Files for IDE ONLY
 #target_sources(fileinfo_lib PUBLIC
