--- a/tui/CMakeLists.txt
+++ b/tui/CMakeLists.txt
@@ -2,7 +2,7 @@ include(FetchContent)
 
 FetchContent_Declare(ftxui
   GIT_REPOSITORY https://github.com/ArthurSonzogni/ftxui
-  GIT_TAG v5.0.0
+  GIT_TAG v6.1.9
 )
 
 FetchContent_MakeAvailable(ftxui)
@@ -11,6 +11,11 @@ add_executable(tfm
     main.cpp
     filemanagerui.cpp
 )
+
+target_include_directories(tfm
+    PUBLIC ${CMAKE_SOURCE_DIR}/utils
+)
+
 
 target_link_libraries(tfm PRIVATE 
     tmf-lib
