--- a/.github/workflows/doxygen-pages.yml
+++ b/.github/workflows/doxygen-pages.yml
@@ -13,6 +13,12 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# HIER werden die Berechtigungen für den gesamten Workflow gesetzt!
+permissions:
+  contents: read   # Erforderlich, um den Code auszuchecken
+  pages: write     # Erforderlich, um das Pages-Deployment zu autorisieren
+  id-token: write  # ERFORDERLICH für OIDC-Authentifizierung beim Deployment
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
